--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "register-service-worker": "^1.6.2",
     "swipe-listener": "^1.1.0",
     "vue": "^2.6.10",
-    "vuex": "^3.0.1"
+    "vuex": "3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
